dev/backend/rollouts/cloudops-gateway/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudops-gateway-rollout-stable
  namespace: cloudops-dev
  labels:
    app: cloudops-gateway-rollout
    role: stable
    env: dev
    app.kubernetes.io/name: cloudops-gateway-rollout
    app.kubernetes.io/part-of: cloudops
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app: cloudops-gateway-rollout
  ports:
    - name: http
      port: 80
      targetPort: 8080
