dev/backend/rollouts/cloudops-gateway/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cloudops-gateway-rollout
  namespace: cloudops-dev
  labels:
    app: cloudops-gateway-rollout
    env: dev
    app.kubernetes.io/name: cloudops-gateway-rollout
    app.kubernetes.io/part-of: cloudops
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - istio-cloudops-gateway.jianggan.cn
        - api.cloudops.jianggan.cn
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: api-cloudops-jianggan-cn-tls
      hosts:
        - api.cloudops.jianggan.cn
