dev/backend/rollouts/cloudops-gateway/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cloudops-gateway-rollout
  namespace: cloudops-dev
  labels:
    app: cloudops-gateway-rollout
    env: dev
    app.kubernetes.io/name: cloudops-gateway-rollout
    app.kubernetes.io/part-of: cloudops
    app.kubernetes.io/managed-by: argocd
spec:
  hosts:
    - istio-cloudops-gateway.jianggan.cn
    - api.cloudops.jianggan.cn
  gateways:
    - cloudops-gateway-rollout
  http:
    - name: primary
      route:
        - destination:
            host: cloudops-gateway-rollout-stable
            port:
              number: 80
          weight: 100
        - destination:
            host: cloudops-gateway-rollout-canary
            port:
              number: 80
          weight: 0
